# tldr-g

./: .gitignore  LICENSE  PUBLICATION_CHECKLIST.md  PUBLIC_BOUNDARY.md  PUBLIC_SYNC.md  README.md  pyproject.toml
docs/: CNAME  README.md  index.html  smoke-2026-06-11.md  style.css
docs/contracts/: portable-artifact-v1.md  render-trace-v1.md  third-party-verify-walkthrough.md
docs/learn/: index.html
examples/: quickstart.py
src/tp_vrg/: __init__.py  admission.py  api_server.py  attestation.py  cardinality.py  centrality.py  chunker.py  claim_validity.py  cli.py  cockpit_app.py  component_registry.py  compression.py  coref.py  coref_lingmess.py  data_dir.py  decomposition.py  defined_terms.py  device_check.py  dormancy.py  embedding_cache.py  embedding_health.py  embeddings.py  engine.py  governor.py  graph_view.py  hype_templates.py  ingestion.py  ingestion_progress.py  intent.py  janitor.py  llm_service.py  logging_setup.py  mcp_server.py  metrics.py  model_client.py  model_server.py  models.py  normalizer.py  probe.py  progress.py  (+22 more)
src/tp_vrg/adapters/: __init__.py  contracts.py  registry.py
src/tp_vrg/adapters/b1/: __init__.py  asset_type.py  code.py  language.py  pdf.py  source_system.py
src/tp_vrg/adapters/b2/: __init__.py  components.py  embeddings.py  extraction.py  storage.py
src/tp_vrg/adapters/b3/: __init__.py  raas.py
src/tp_vrg/adapters/b4/: __init__.py  langchain.py
src/tp_vrg/adapters/b5/: __init__.py  federation.py
src/tp_vrg/algebra/: __init__.py  aggregation.py  bundle.py  inheritance.py  invalidation.py  inversion.py  persistence.py
src/tp_vrg/cockpit_ui/: __init__.py  index.html
src/tp_vrg/extraction/: __init__.py  stopword_filter.py
src/tp_vrg/importers/: __init__.py  chatgpt.py
src/tp_vrg/janitor/: __init__.py  bake_asset_rung.py  bake_continent_rung.py  bake_island_rung.py  bake_partitions.py  bake_render_affinity.py  bake_similarity_edges.py  bake_speculative_prerender.py  cache_invalidation.py  query_shape_cluster.py
src/tp_vrg/manifolds/: __init__.py  composition.py  query.py  render.py  temporal.py
src/tp_vrg/multi_res/: __init__.py  centroid_query.py  descent_algorithm.py  descent_scoring.py  descent_step.py  entry_seed.py  errors.py  integration.py  telemetry.py
src/tp_vrg/storage/: __init__.py  cockpit_stats.py  community_partitions.py  connection_isolation.py  graph_glance.py  health.py  per_rung_centroids.py  render_affinity_edges.py  similarity_edges.py  speculative_cache.py
tests/: test_attestation.py  test_component_registry.py  test_governor.py  test_models.py  test_provenance_audit.py  test_provenance_storage.py  test_public_smoke.py  test_water.py
tests/adapters/: test_contracts.py  test_registry.py  test_stub_packages.py
tests/adapters/b1/: test_stubs.py
tools/: provenance_audit.py
