[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tp-vrg"
version = "0.3.0"
description = "TP-VRG — open boundary contracts + offline verification for the knowledge rendering engine"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
# Engine-free public surface: attestation/verify needs cryptography; the
# provenance audit tool + the adapter contracts are stdlib-only.
dependencies = [
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
tp-vrg-verify = "tp_vrg.verify_cli:main"

[tool.setuptools.packages.find]
where = ["src"]
